fix: exhaustive alignment CSS with high specificity

--- a/input.css
+++ b/input.css
@@ -34,14 +34,23 @@
 }
 
 /* Quill alignment classes to support editor-aligned content on public pages */
-.ql-align-center {
-    text-align: center;
+.ql-align-center,
+.prose .ql-align-center,
+.prose p.ql-align-center,
+[class*="ql-align-center"] {
+    text-align: center !important;
 }
 
-.ql-align-right {
-    text-align: right;
+.ql-align-right,
+.prose .ql-align-right,
+.prose p.ql-align-right,
+[class*="ql-align-right"] {
+    text-align: right !important;
 }
 
-.ql-align-justify {
-    text-align: justify;
+.ql-align-justify,
+.prose .ql-align-justify,
+.prose p.ql-align-justify,
+[class*="ql-align-justify"] {
+    text-align: justify !important;
 }
